fix reloading issue on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,3 +79,7 @@ img {
   -webkit-user-select: none;
   -ms-user-select: none;
 }
+
+html, body {
+  overscroll-behavior: none;
+}
